--- a/chirp/views/index.ejs
+++ b/chirp/views/index.ejs
@@ -2,26 +2,30 @@
 <html>
 	<head>
 		<title>Chirp</title>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-route.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-resource.js"></script>
+		<script src="lib/angular.js"></script>
+		<script src="lib/angular-ui-router.js"></script>
+		<script src="lib/angular-resource.js"></script>
 		<script src="javascripts/chirpApp.js"></script>
+		<script src="javascripts/controllers/AuthController.js"></script>
+		<script src="javascripts/controllers/MainController.js"></script>
+		<script src="javascripts/services/UserService.js"></script>
+		<script src="javascripts/services/PostService.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 		<link rel="stylesheet" href="stylesheets/style.css">
 	</head>
 	<body ng-app="chirpApp">
 		<div id='main' class="container">
-			<nav class="navbar-fluid navbar-default navbar-fixed-top">
+			<nav class="navbar-fluid navbar-default navbar-fixed-top" ng-controller="AuthController as vm">
 				<div class="container">
-					    <a class="navbar-brand" href="#"> Chirp! </a>
+					    <a class="navbar-brand" ui-sref="home"> Chirp! </a>
 					    <p class="navbar-text"> Learn the MEAN stack by building this tiny app</p>
-					    <p class="navbar-right navbar-text" ng-hide="authenticated"><a href="#/login">Login</a> or <a href="#/register">Register</a></p>
-					    <p class="navbar-right navbar-text" ng-show="authenticated"><a href="#" ng-click="signout()">Logout</a></p>
-					    <p class="navbar-right navbar-text" ng-show="authenticated">Signed in as {{current_user}}</p>
+					    <p class="navbar-right navbar-text" ng-hide="vm.authenticated"><a ui-sref="login">Login</a> or <a ui-sref="register">Register</a></p>
+					    <p class="navbar-right navbar-text" ng-show="vm.authenticated"><a ui-sref="home" ng-click="vm.UserService.signout()">Logout</a></p>
+					    <p class="navbar-right navbar-text" ng-show="vm.authenticated">Signed in as {{vm.current_user}}</p>
 				</div>
 			</nav>
 			<div class="col-md-offset-2 col-md-8">
-				<div ng-view>
+				<div ui-view>
 				</div>
 			</div>
 		</div>
