--- a/chirp/views/index.ejs
+++ b/chirp/views/index.ejs
@@ -19,9 +19,10 @@
 				<div class="container">
 					    <a class="navbar-brand" ui-sref="home"> Chirp! </a>
 					    <p class="navbar-text"> Learn the MEAN stack by building this tiny app</p>
-					    <p class="navbar-right navbar-text" ng-hide="vm.authenticated"><a ui-sref="login">Login</a> or <a ui-sref="register">Register</a></p>
-					    <p class="navbar-right navbar-text" ng-show="vm.authenticated"><a ui-sref="home" ng-click="vm.UserService.signout()">Logout</a></p>
-					    <p class="navbar-right navbar-text" ng-show="vm.authenticated">Signed in as {{vm.current_user}}</p>
+							<!-- <p class="authenticated status">{{vm.UserService.authenticated}}</p> -->
+					    <p class="navbar-right navbar-text" ng-hide="vm.UserService.authenticated"><a ui-sref="login">Login</a> or <a ui-sref="register">Register</a></p>
+					    <p class="navbar-right navbar-text" ng-show="vm.UserService.authenticated"><a ui-sref="home" ng-click="vm.UserService.signout()">Logout</a></p>
+					    <p class="navbar-right navbar-text" ng-show="vm.UserService.authenticated">Signed in as {{vm.UserService.current_user}}</p>
 				</div>
 			</nav>
 			<div class="col-md-offset-2 col-md-8">
